@@ -11,6 +11,7 @@ Changes:
 - Improved firmware update procedure.
 - More SMB protocols and configuration options added.
 - Encrypt user passwords.
+- Netatalk authentication method selection improved.
 - Upgrade msmtp to 1.6.6.
 - Upgrade arcconf to v2_02_22404.
 - Upgrade novnc to 0.6.2.
